[gd_scene load_steps=8 format=3 uid="uid://dfj2mhwrs1oss"]

[ext_resource type="Script" path="res://addons/licenses/internal/component_detail_tree.gd" id="1"]
[ext_resource type="Script" path="res://addons/licenses/internal/components_tree.gd" id="2"]
[ext_resource type="Script" path="res://addons/licenses/internal/toolbar.gd" id="2_a8iu8"]
[ext_resource type="Script" path="res://addons/licenses/internal/licenses.gd" id="3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5cx7n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pof4k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g1exn"]

[node name="licenses" type="MarginContainer" node_paths=PackedStringArray("_components_tree", "_component_detail_tree", "_toolbar", "_license_file_edit", "_license_file_load_button", "_set_license_filepath_button")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("3")
_components_tree = NodePath("VBoxContainer/HSplitContainer/PanelContainer/VBoxContainer/components")
_component_detail_tree = NodePath("VBoxContainer/HSplitContainer/component_detail")
_toolbar = NodePath("VBoxContainer/HSplitContainer/PanelContainer/VBoxContainer/toolbar")
_license_file_edit = NodePath("VBoxContainer/license_file_config/edit")
_license_file_load_button = NodePath("VBoxContainer/license_file_config/file_button")
_set_license_filepath_button = NodePath("VBoxContainer/license_file_config/set_license_filepath_button")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="license_file_config" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="file_button" type="Button" parent="VBoxContainer/license_file_config"]
layout_mode = 2

[node name="edit" type="LineEdit" parent="VBoxContainer/license_file_config"]
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
localize_numeral_system = false
auto_translate = false
placeholder_text = "res://licenses.json"

[node name="set_license_filepath_button" type="Button" parent="VBoxContainer/license_file_config"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="toolbar" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/VBoxContainer" node_paths=PackedStringArray("_menu_button", "_add_button")]
layout_mode = 2
script = ExtResource("2_a8iu8")
_menu_button = NodePath("menu")
_add_button = NodePath("add")

[node name="menu" type="Button" parent="VBoxContainer/HSplitContainer/PanelContainer/VBoxContainer/toolbar"]
layout_mode = 2
flat = true

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/PanelContainer/VBoxContainer/toolbar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Components"
horizontal_alignment = 1
vertical_alignment = 1

[node name="add" type="Button" parent="VBoxContainer/HSplitContainer/PanelContainer/VBoxContainer/toolbar"]
layout_mode = 2
flat = true

[node name="components" type="Tree" parent="VBoxContainer/HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_5cx7n")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pof4k")
allow_rmb_select = true
hide_root = true
scroll_horizontal_enabled = false
script = ExtResource("2")

[node name="component_detail" type="Tree" parent="VBoxContainer/HSplitContainer" node_paths=PackedStringArray("_nothing_selected_note")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_g1exn")
columns = 2
hide_root = true
script = ExtResource("1")
_nothing_selected_note = NodePath("CenterContainer")

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HSplitContainer/component_detail"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/component_detail/CenterContainer"]
layout_mode = 2
text = "Select a component."

[connection signal="button_clicked" from="VBoxContainer/HSplitContainer/PanelContainer/VBoxContainer/components" to="VBoxContainer/HSplitContainer/PanelContainer/VBoxContainer/components" method="_on_button_clicked"]
[connection signal="item_edited" from="VBoxContainer/HSplitContainer/PanelContainer/VBoxContainer/components" to="VBoxContainer/HSplitContainer/PanelContainer/VBoxContainer/components" method="_on_item_edited"]
[connection signal="item_selected" from="VBoxContainer/HSplitContainer/PanelContainer/VBoxContainer/components" to="VBoxContainer/HSplitContainer/PanelContainer/VBoxContainer/components" method="_on_item_selected"]
[connection signal="button_clicked" from="VBoxContainer/HSplitContainer/component_detail" to="VBoxContainer/HSplitContainer/component_detail" method="_on_button_clicked"]
[connection signal="cell_selected" from="VBoxContainer/HSplitContainer/component_detail" to="VBoxContainer/HSplitContainer/component_detail" method="_on_cell_selected"]
[connection signal="item_edited" from="VBoxContainer/HSplitContainer/component_detail" to="VBoxContainer/HSplitContainer/component_detail" method="_on_item_edited"]
